--- a/templates/website/menu/menu.html
+++ b/templates/website/menu/menu.html
@@ -1,272 +1,6 @@
+{% include 'website/layouts/header.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html>
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<head>
 
-<meta charset="utf-8">
-<title>Homepages 1</title>
-<meta name="description" content>
-<meta name="author" content>
-
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-<link rel="shortcut icon" href="{% static 'website/favicon.png' %}" />
-
-<link rel="stylesheet" type="text/css" href="{% static 'website/fonts/material-design-iconic-font/css/material-design-iconic-font.min.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'website/fonts/font-awesome-5/css/fontawesome-all.min.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'website/css/josefinsans-font.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'website/css/librebaskerville-font.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'website/css/satisfy-font.css' %}">
-
-
-<link rel="stylesheet" href="{% static 'website/vendor/bootrap/css/bootstrap.min.css' %}" />
-
-<link rel="stylesheet" href="{% static 'website/vendor/owl/css/owl.carousel.min.css' %}">
-<link rel="stylesheet" href="{% static 'website/vendor/owl/css/owl.theme.default.min.css' %}">
-<link rel="stylesheet" href="{% static 'website/vendor/owl/css/animate.css' %}">
-
-
-<link rel="stylesheet" type="text/css" href="{% static 'website/vendor/revolution/css/settings.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'website/vendor/revolution/css/layers.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'website/vendor/revolution/css/navigation.css' %}">
-
-<link rel="stylesheet" type="text/css" href="{% static 'website/vendor/fancybox-master/css/jquery.fancybox.min.css' %}">
-
-<link rel="stylesheet" type="text/css" href="{% static 'website/vendor/datepicker/css/jquery-ui.min.css' %}">
-
-<link rel="stylesheet" href="{% static 'website/css/style.css' %}" /></head>
-<body class="homepages-1">
-
-<div class="images-preloader">
-<div id="preloader_1 spinner1" class="spinner1 rectangle-bounce">
-<div class="double-bounce1"></div>
-<div class="double-bounce2"></div>
-</div>
-</div>
-<header class="header">
-
-<div class="show-desktop-header header-hp-1">
-<div id="js-navbar-fixed" class="menu-desktop">
-<div class="container menu-desktop-inner">
-
-<div class="logo">
-<a href="index-2.html"><img src="{% static 'website/images/icons/logo-white.png' %}" alt="logo"></a>
-</div>
-
-<nav class="main-menu">
-<ul>
-<li class="menu-item">
-<a href="/" class="current">
-HOME
-</a>
-
-</li>
-<li class="menu-item">
-<a href="menu-v1.html">
-MENU
-</a>
-<ul class="sub-menu">
-<li><a href="menu-v1.html">Menu v1</a></li>
-<li><a href="menu-starter.html">Menu Starter</a></li>
-<li><a href="menu-lunch.html">Menu Lunch</a></li>
-<li><a href="menu-dinner.html">Menu Dinner</a></li>
-<li><a href="menu-v2.html">Menu v2</a></li>
-</ul>
-</li>
-<li class="menu-item">
-<a href="about.html">
-PAGES
-</a>
-<ul class="sub-menu">
-<li><a href="about.html">About Us</a></li>
-<li><a href="our-team.html">Our Team</a></li>
-<li>
-<a href="events.html">Events</a>
-<ul class="sub-menu menu-levels">
-<li><a href="events-details.html">Events Details</a></li>
-</ul>
-</li>
-<li>
-<a href="reservation-form-v1.html">Reservation Form</a>
-<ul class="sub-menu menu-levels">
-<li><a href="reservation-form-v1.html">Reservation Form v1</a></li>
-<li><a href="reservation-form-v2.html">Reservation Form v2</a></li>
-<li><a href="reservation-form-v3.html">Reservation Form v3</a></li>
-</ul>
-</li>
-<li><a href="404.html">404</a></li>
-<li><a href="comming-soon.html">Comming Soon</a></li>
-</ul>
-</li>
-<li class="menu-item">
-<a href="gallery-grid-v1.html">
-GALLERY
-</a>
-<ul class="sub-menu">
-<li><a href="gallery-grid-v1.html">Gallery Grid v1</a></li>
-<li><a href="gallery-grid-v2.html">Gallery Grid v2</a></li>
-<li><a href="gallery-wall.html">Gallery Wall</a></li>
-</ul>
-</li>
-<li class="menu-item">
-<a href="blog-grid-v1.html">
-BLOG
-</a>
-<ul class="sub-menu">
-<li><a href="blog-grid-v1.html">Blog Grid v1</a></li>
-<li><a href="blog-grid-v2.html">Blog Grid v2</a></li>
-<li><a href="blog-list.html">Blog List</a></li>
-<li><a href="blog-sidebar.html">Blog Sidebar</a></li>
-<li><a href="blog-details.html">Blog Details</a></li>
-</ul>
-</li>
-<li class="menu-item">
-<a href="contact-us-v1.html">
-CONTACT
-</a>
-<ul class="sub-menu">
-<li><a href="contact-us-v1.html">Contact Us v1</a></li>
-<li><a href="contact-us-v2.html">Contact Us v2</a></li>
-</ul>
-</li>
-</ul>
-</nav>
-</div>
-</div>
-</div>
-
-<div id="js-navbar-mb-fixed" class="show-mobile-header mobile-header-bg-black">
-
-<div class="mobile-top-header style-mobile-top-header">
-<div class="logo-mobile">
-<a href="index-2.html"><img src="{% static 'website/images/icons/logo-white.png' %}" alt="logo"></a>
-</div>
-<button class="hamburger hamburger--spin hidden-tablet-landscape-up" id="toggle-icon">
-<span class="hamburger-box">
-<span class="hamburger-inner"></span>
-</span>
-</button>
-</div>
-
-<div class="au-navbar-mobile navbar-mobile-1">
-<div class="au-navbar-menu">
-<ul>
-<li class="drop">
-<a class="drop-link" href="#">
-HOME
-<span class="arrow">
-<i class="zmdi zmdi-chevron-down"></i>
-</span>
-</a>
-<ul class="drop-menu bottom-right">
-<li><a href="index-2.html">Home Page 1</a></li>
-<li><a href="index2.html">Home Page 2</a></li>
-<li><a href="index3.html">Home Page 3</a></li>
-<li><a href="index4.html">Home Page 4</a></li>
-<li><a href="index5.html">Home Page 5</a></li>
-<li><a href="index6.html">Home Page 6</a></li>
-</ul>
-</li>
-<li class="drop">
-<a class="drop-link" href="#">
-MENU
-<span class="arrow">
-<i class="zmdi zmdi-chevron-down"></i>
-</span>
-</a>
-<ul class="drop-menu bottom-right">
-<li><a href="menu-v1.html">Menu v1</a></li>
-<li><a href="menu-starter.html">Menu Starter</a></li>
-<li><a href="menu-lunch.html">Menu Lunch</a></li>
-<li><a href="menu-dinner.html">Menu Dinner</a></li>
-<li><a href="menu-v2.html">Menu v2</a></li>
-</ul>
-</li>
-<li class="drop">
-<a class="drop-link" href="#">
-PAGES
-<span class="arrow">
-<i class="zmdi zmdi-chevron-down"></i>
-</span>
-</a>
-<ul class="drop-menu bottom-right">
-<li><a href="about.html">About Us</a></li>
-<li><a href="our-team.html">Our Team</a></li>
-<li class="drop">
-<a class="drop-link" href="#">
-Events
-<span class="arrow">
-<i class="zmdi zmdi-chevron-down"></i>
-</span>
-</a>
-<ul class="drop-menu bottom-right">
-<li><a class="drop-menu-inner" href="events.html">Events</a></li>
-<li><a class="drop-menu-inner" href="events-details.html">Events Details</a></li>
-</ul>
-</li>
-<li class="drop">
-<a class="drop-link" href="#">
-Reservation Form
-<span class="arrow">
-<i class="zmdi zmdi-chevron-down"></i>
-</span>
-</a>
-<ul class="drop-menu bottom-right">
-<li><a class="drop-menu-inner" href="reservation-form-v1.html">Reservation Form v1</a></li>
-<li><a class="drop-menu-inner" href="reservation-form-v2.html">Reservation Form v2</a></li>
-<li><a class="drop-menu-inner" href="reservation-form-v3.html">Reservation Form v3</a></li>
-</ul>
-</li>
-<li><a href="404.html">404</a></li>
-<li><a href="comming-soon.html">Comming Soon</a></li>
-</ul>
-</li>
-<li class="drop">
-<a class="drop-link" href="#">
-GALLERY
-<span class="arrow">
-<i class="zmdi zmdi-chevron-down"></i>
-</span>
-</a>
-<ul class="drop-menu bottom-right">
-<li><a href="gallery-grid-v1.html">Gallery Grid v1</a></li>
-<li><a href="gallery-grid-v2.html">Gallery Grid v2</a></li>
-<li><a href="gallery-wall.html">Gallery Wall</a></li>
-</ul>
-</li>
-<li class="drop">
-<a class="drop-link" href="#">
-BLOG
-<span class="arrow">
-<i class="zmdi zmdi-chevron-down"></i>
-</span>
-</a>
-<ul class="drop-menu bottom-right">
-<li><a href="blog-grid-v1.html">Blog Grid v1</a></li>
-<li><a href="blog-grid-v2.html">Blog Grid v2</a></li>
-<li><a href="blog-list.html">Blog List</a></li>
-<li><a href="blog-sidebar.html">Blog Sidebar</a></li>
-<li><a href="blog-details.html">Blog Details</a></li>
-</ul>
-</li>
-<li class="drop">
-<a class="drop-link" href="#">
-CONTACT Us
-<span class="arrow">
-<i class="zmdi zmdi-chevron-down"></i>
-</span>
-</a>
-<ul class="drop-menu bottom-right">
-<li><a href="contact-us-v1.html">Contact Us v1</a></li>
-<li><a href="contact-us-v2.html">Contact Us v2</a></li>
-</ul>
-</li>
-</ul>
-</div>
-</div>
-</div>
-</header>
 <div class="page-content">
 
 <section class="breadcrumb-our-team breadcrumb-menu-section section-box" style="background-image: url({% static 'website/images/our-team-bc.jpg' %})">
@@ -383,169 +117,5 @@ At
 </div>
 
 </div>
-<footer class="footer-section section-box">
-<div class="container">
-<div class="footer-content">
-<div class="row">
-<div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
-<div class="footer-item">
-<div class="logo">
-<a href="index-2.html"><img src="{% static 'website/images/icons/logo-white.png' %}" alt="logo"></a>
-</div>
-<p>Turpis tincidunt id aliquet feugiat. Lectus magna fringilla urna porttitor rhoncus. Velit sed ullamcorper morbi tincidunt ornare mas.</p>
-<div class="socials">
-<a href="#"><i class="zmdi zmdi-facebook"></i></a>
-<a href="#"><i class="zmdi zmdi-google-plus"></i></a>
-<a href="#"><i class="zmdi zmdi-twitter"></i></a>
-<a href="#"><i class="zmdi zmdi-instagram"></i></a>
-</div>
-</div>
-</div>
-<div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
-<div class="footer-item">
-<div class="widget_recent_entries">
-<h5 class="widget-title">RECENT POSTS</h5>
-<ul>
-<li><a href="blog-details.html">The Art of Eat</a></li>
-<li><a href="blog-details.html">Cook Parent Parental</a></li>
-<li><a href="blog-details.html">Every Cook and Cranny</a></li>
-<li><a href="blog-details.html">Cook the Cooks</a></li>
-</ul>
-</div>
-</div>
-</div>
-<div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
-<div class="footer-item">
-<h5>INSTAGRAM</h5>
-<div class="insta-content">
-<div class="insta-image">
-<a href="{% static 'website/images/hp-1-footer-1.jpg' %}" data-fancybox="gallery" class="gallery-elements"><img src="{% static 'website/images/hp-1-footer-1.jpg' %}" alt="insta-image"></a>
-</div>
-<div class="insta-image">
-<a href="{% static 'website/images/hp-1-footer-2.jpg' %}" data-fancybox="gallery" class="gallery-elements"><img src="{% static 'website/images/hp-1-footer-2.jpg' %}" alt="insta-image"></a>
-</div>
-<div class="insta-image">
-<a href="{% static 'website/images/hp-1-footer-3.jpg' %}" data-fancybox="gallery" class="gallery-elements"><img src="{% static 'website/images/hp-1-footer-3.jpg' %}" alt="insta-image"></a>
-</div>
-</div>
-<div class="insta-content">
-<div class="insta-image">
-<a href="{% static 'website/images/hp-1-footer-4.jpg' %}" data-fancybox="gallery" class="gallery-elements"><img src="{% static 'website/images/hp-1-footer-4.jpg' %}" alt="insta-image"></a>
-</div>
-<div class="insta-image">
-<a href="{% static 'website/images/hp-1-footer-5.jpg' %}" data-fancybox="gallery" class="gallery-elements"><img src="{% static 'website/images/hp-1-footer-5.jpg' %}" alt="insta-image"></a>
-</div>
-<div class="insta-image">
-<a href="{% static 'website/images/hp-1-footer-6.jpg' %}" data-fancybox="gallery" class="gallery-elements"><img src="{% static 'website/images/hp-1-footer-6.jpg' %}" alt="insta-image"></a>
-</div>
-</div>
-</div>
-</div>
-<div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
-<div class="footer-item">
-<h5>CONTACT INFO</h5>
-<div class="contact-content">
-<div class="contact-inner">
-<i class="zmdi zmdi-pin"></i>
-<div class="text">
-<span class="address">Reon, 1535 Broadway, New York</span>
-</div>
-</div>
-<div class="contact-inner">
-<i class="zmdi zmdi-phone"></i>
-<div class="text">
-<span><a href="tel:18889993333">+1 888-999-3333</a></span>
-</div>
-</div>
-<div class="contact-inner">
-<i class="zmdi zmdi-email"></i>
-<div class="text">
-<span><a href="https://freebw.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="e9aa86879d888a9da98c91888499858cc78a8684">[email&#160;protected]</a></span>
-</div>
-</div>
-<div class="contact-inner">
-<i class="zmdi zmdi-time"></i>
-<div class="text">
-<div class="text-inner">
-<span class="text-1">Lunch:</span>
-<span class="text-2">Everyday</span>
-</div>
-<div class="text-inner">
-<span class="text-1">Dinner: Mon- Thu </span>
-<span class="text-2">18:00-21:30</span>
-</div>
-<div class="text-inner">
-<span class="text-1">Dinner: Fri- Sun</span>
-<span class="text-2">19:00-21:00</span>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="sub-footer">
-<span>Copyright @ 2018 <a href="#">Reon</a>. Get The Theme</span>
-</div>
-</footer>
-<a href="#" id="back-to-top">
-<i class="zmdi zmdi-chevron-up"></i>
-</a>
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
-</button>
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<script data-cfasync="false" src="{% static 'website/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js' %}"></script><script src="{% static 'website/ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js' %}"></script>
-
-<script src="{% static 'website/vendor/bootrap/js/bootstrap.min.js' %}"></script>
-
-<script src="{% static 'website/vendor/owl/js/owl.carousel.min.js' %}"></script>
-<script src="{% static 'website/vendor/owl/js/OwlCarousel2Thumbs.min.js' %}"></script>
-
-<script src="{% static 'website/vendor/revolution/js/jquery.themepunch.tools.min.js' %}"></script>
-<script src="{% static 'website/vendor/revolution/js/jquery.themepunch.revolution.min.js' %}"></script>
-
-<script type="text/javascript" src="{% static 'website/js/isotope.pkgd.min.js' %}"></script>
-<script src="{% static 'website/js/imagesloaded.pkgd.min.js' %}"></script>
-
-<script type="text/javascript" src="{% static 'website/js/jquery.masonry.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'website/js/masonry.pkgd.min.js' %}"></script>
-
-<script type="text/javascript" src="{% static 'website/vendor/fancybox-master/js/jquery.fancybox.min.js' %}"></script>
-
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEmXgQ65zpsjsEAfNPP9mBAz-5zjnIZBw"></script>
-<script src="{% static 'website/js/theme-map.js' %}"></script>
-
-<script src="{% static 'website/vendor/sweetalert/sweetalert.min.js' %}"></script>
-<script src="{% static 'website/js/config-contact.js' %}"></script>
-
-<script src="{% static 'website/vendor/datepicker/js/jquery-ui.min.js' %}"></script>
-
-<script src="{% static 'website/js/custom.js' %}"></script>
-
-</body>
-</html>
+{% include 'website/layouts/footer.html' %}
