--- a/templates/website/gallery/gallery-view.html
+++ b/templates/website/gallery/gallery-view.html
@@ -22,8 +22,11 @@
 
 {% for i in gallery %}
 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-12">
-<div class="gallery-detail">
-<img src="{{i.image.url}}" alt="gallery-9">
+<div class="gallery-detail" style="height: 100%;" >
+<img src="{{i.image.url}}" alt="gallery-9" style="
+    height: 100%;width: 100%;
+    object-fit: cover;
+">
 <div class="overlay"></div>
 <div class="gallery-zoom">
 <a href="{{i.image.url}}" data-fancybox="gallery" class="gallery-elements">
