--- a/templates/website/home/index.html
+++ b/templates/website/home/index.html
@@ -376,7 +376,7 @@ console.log(wordAfterHash); // Output: Dinner
 }else{
 var wordAfterHash = 'Starter';
 }
-alert(wordAfterHash);
+<!--alert(wordAfterHash);-->
 		$.ajax({
 		  url: '/gotomenu',
 		  type: 'GET',
