--- a/templates/website/menu/menu.html
+++ b/templates/website/menu/menu.html
@@ -33,12 +33,12 @@
 <img src="{% static 'website/images/icons/menu-starter-icon-1.png' %}" alt="salad">
 <h2>SALAD</h2>
 </div>
-<div id="salad-section" class="owl-carousel owl-theme">
-<div class="item">
+<div id="" class="">
+<div class="item row">
 
     {% for i in menu %}
 
-<div class="item-content">
+<div class="item-content col-lg-6  salad_card">
 <div class="image">
 <img src="{% static 'website/images/menu-starter-salad-1.jpg' %}" alt="salad">
 </div>
