--- a/static/website/css/style.css
+++ b/static/website/css/style.css
@@ -93,3 +93,13 @@ body{
     transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
     transform-origin: 50% 50% 0px;
   }
+  .salad_card{
+     display:flex;
+     margin-bottom:50px
+  }
+  .salad_card img{
+    width:150px;
+  }
+    .salad_card .image{
+    margin-right:20px
+  }
