--- a/templates/website/gallery/gallery-view.html
+++ b/templates/website/gallery/gallery-view.html
@@ -6,8 +6,8 @@
 <section class="breadcrumb-gallery-grid-v1 breadcrumb-section section-box" style="background-image: url({% static 'website/images/gallery-grid-v1-bc.jpg' %})">
 <div class="container">
 <div class="breadcrumb-inner">
-<h1>Gallery Grid</h1>
-<span class="breadcrumbs-text">Volutpat odio facilisis mauris sit. Consectetur adipiscing elit pellentesque habitant morbi tristique.</span>
+<h1>Gallery</h1>
+<span class="breadcrumbs-text"></span>
 </div>
 </div>
 </section>
@@ -23,10 +23,7 @@
 {% for i in gallery %}
 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-12">
 <div class="gallery-detail" style="height: 100%;" >
-<img src="{{i.image.url}}" alt="gallery-9" style="
-    height: 100%;width: 100%;
-    object-fit: cover;
-">
+<img src="{{i.image.url}}" alt="gallery-9" style="height: 100%;width: 100%;object-fit: cover;">
 <div class="overlay"></div>
 <div class="gallery-zoom">
 <a href="{{i.image.url}}" data-fancybox="gallery" class="gallery-elements">
@@ -42,11 +39,11 @@
 </div>
 </section>
 
-  <section class="breadcrumb-gallery-grid-v1 breadcrumb-section section-box" style="background-image: url(images/gallery-grid-v1-bc.jpg)">
+  <section class="breadcrumb-gallery-grid-v1 breadcrumb-section section-box" style="background-image: url({% static 'website/images/gallery-grid-v1-bc.jpg' %})">
 <div class="container">
 <div class="breadcrumb-inner">
-<h1>Gallery Grid</h1>
-<span class="breadcrumbs-text">Volutpat odio facilisis mauris sit. Consectetur adipiscing elit pellentesque habitant morbi tristique.</span>
+<h1>Gallery </h1>
+<span class="breadcrumbs-text"></span>
 </div>
 </div>
 </section>
