--- a/templates/website/home/index.html
+++ b/templates/website/home/index.html
@@ -31,32 +31,9 @@
     opacity: 1;
     transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
     transform-origin: 50% 50% 0px;" class="" data-frames="[{&quot;delay&quot;:500,&quot;speed&quot;:1000,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:-50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:-20px;opacity:0;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]" data-fontsize="['70', '70', '70', '70']" data-lineheight="['50', '50', '50', '50']" data-color="#f2f2f2" data-textAlign="['center', 'center', 'center', 'center']" data-x="['center','center','center','center']" data-y="['middle','middle','middle','middle']" data-hoffset="['0', '0', '0', '0']" data-voffset="['-74', '-75', '-85', '-60']" data-width="['1200', '770', '800', '800']" data-whitespace="normal" data-basealign="slide" data-responsive_offset="off">
-Welcome to Reon Place
+Welcome to Royal Spice
 </div>
-<!--<div style="    font-family: josefin sans, sans-serif;visibility: inherit;-->
-<!--    transition: none 0s ease 0s;-->
-<!--    text-align: center;-->
-<!--    line-height: 27px;-->
-<!--    border-width: 0px;-->
-<!--    margin: 0px;-->
-<!--    padding: 0px;-->
-<!--    letter-spacing: 0px;-->
-<!--    font-weight: 400;-->
-<!--    font-size: 20px;-->
-<!--    white-space: normal;-->
-<!--    min-height: 0px;-->
-<!--    min-width: 700px;-->
-<!--    max-height: none;-->
-<!--    max-width: 700px;-->
-<!--    color: rgb(242, 242, 242);-->
-<!--    opacity: 1;-->
-<!--    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);-->
-<!--    transform-origin: 50% 50% 0px;" class="" data-frames="[{&quot;delay&quot;:1000,&quot;speed&quot;:1000,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:-50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:-20px;opacity:0;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]" data-fontsize="['20', '22', '30', '35']" data-lineheight="['27', '30', '40', '50']" data-color="#f2f2f2" data-textAlign="['center', 'center', 'center', 'center']" data-x="['center','center','center','center']" data-y="['middle','middle','middle','middle']" data-hoffset="['0', '0', '0', '0']" data-voffset="['0', '0', '0', '0']" data-width="['700', '700', '650', '800']" data-whitespace="normal" data-basealign="slide" data-responsive_offset="off">-->
-<!--ROMANTIC WINES TO FALL IN LOVE WITH-->
-<!--</div>-->
-<!-- <a href="#" target="_self" class="tp-caption tp-resizeme au-btn btn-medium btn-resize-slider-1 au-btn-red" data-frames="[{&quot;delay&quot;:1500,&quot;speed&quot;:1000,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:20px;opacity:0;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]" data-x="['center','center','center','center']" data-y="['middle','middle','middle','middle']" data-hoffset="['0', '0', '0', '0']" data-voffset="['99', '100', '108', '100']" data-basealign="slide" data-responsive_offset="off">
-RESERVATION
-</a> -->
+
     </div>
   </div>
 
@@ -80,15 +57,15 @@ RESERVATION
 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
 <div class="story-content">
 <h3 class="special-heading">Discover</h3>
-<h2 class="special-heading-1">OUR STORY</h2>
+<h2 class="special-heading-1">ABOUT US</h2>
 <p>“Cras sed felis eget velit aliquet. Etiam dignissim diam lobortis scelerisque fermentum. Eu non diam phasellus vestibulum lore risus ultricies tristique varius quam quis hendrerit dolor.”</p>
-<div class="story-quote">
-<img src="{% static 'website/images/hp-1-story-3.jpg' %}" alt="story">
-<div class="info">
-<span class="name">FRANK REYES</span>
-<span class="job">Master Chef</span>
-</div>
-</div>
+<!--<div class="story-quote">-->
+<!--<img src="{% static 'website/images/hp-1-story-3.jpg' %}" alt="story">-->
+<!--<div class="info">-->
+<!--<span class="name">FRANK REYES</span>-->
+<!--<span class="job">Master Chef</span>-->
+<!--</div>-->
+<!--</div>-->
 </div>
 </div>
 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
@@ -116,47 +93,30 @@ RESERVATION
 <div class="container">
 <div id="feature-hp-1" class="owl-carousel owl-theme">
 
-<div class="feature-content">
-<div class="feature-detail">
-<h3 class="special-heading">Amazing Delicious</h3>
-<h2 class="special-heading-1">Special Cocktails</h2>
-<p>Etiam tempor orci eu lobortis elementum. Scel eleifend donec pretium vulputate sapien nec sagittis. Risus quis varius quam quisque id. Aliquet porttr lacus l accumsan tortor posuere ac. Vel fringilla est ullamcorper eget nul facilisi etiam dignissim.</p>
-<div class="book-table">
-<a href="#" class="au-btn au-btn-red btn-medium">BOOK A TABLE</a>
-</div>
-</div>
-<div class="feature-image">
-<img src="{% static 'website/images/hp-1-features-2.jpg' %}" alt="feature-1">
-</div>
-</div>
+{% for i in testimonials %}
 
 <div class="feature-content">
 <div class="feature-detail">
-<h3 class="special-heading">Amazing Delicious</h3>
-<h2 class="special-heading-1">Bean Salad</h2>
-<p>Mauris commodo quis imperdiet massa tincidunt nunc pulvinar sapien et. Sodales ut eu sem integer vitae. Nibh nisl condimentum id venenatis a condimentum vitae. Euismod nisi porta lorem mollis aliquam ut. Habita morbi tristique senectus et netus et malesus.</p>
-<div class="book-table">
-<a href="#" class="au-btn au-btn-black btn-medium">BOOK A TABLE</a>
+<h3 class="special-heading">Testimonials</h3>
+<h2 class="special-heading-1">{{i.user|upper}}</h2>
+		<div class="star">
+<i class="zmdi zmdi-star"></i>
+<i class="zmdi zmdi-star"></i>
+<i class="zmdi zmdi-star"></i>
+<i class="zmdi zmdi-star"></i>
+<span><i class="zmdi zmdi-star-outline"></i></span>
 </div>
+<p>{{i.description}}</p>
+
 </div>
+
 <div class="feature-image">
-<img src="{% static 'website/images/hp-1-features-3.jpg' %}" alt="feature-3">
+
+<!--<img src="{% static 'website/images/hp-1-features-2.jpg' %}" alt="feature-1">-->
 </div>
 </div>
 
-<div class="feature-content">
-<div class="feature-detail">
-<h3 class="special-heading">Amazing Delicious</h3>
-<h2 class="special-heading-1">Steak Fingers & Gravy</h2>
-<p>They ate it. They loved it. Then they hugged me and said they’d be back soon. Mauris sit amet commodo imperdiet massa tincidunt nunc pulvinar sap ut enim bland volutpat maecenas volutpat. Feugiat sed lectus vestibulum mattis ullamcorper enim blandit volutpat</p>
-<div class="book-table">
-<a href="#" class="au-btn au-btn-black btn-medium">BOOK A TABLE</a>
-</div>
-</div>
-<div class="feature-image">
-<img src="{% static 'website/images/hp-1-features-4.jpg' %}" alt="feature-4">
-</div>
-</div>
+{% endfor %}
 </div>
 </div>
 </section>
@@ -274,8 +234,11 @@ RESERVATION
 {% for i in gallery %}
 
 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
-<div class="gallery-detail">
-<img src="{{i.image.url}}" alt="gallery-1">
+<div class="gallery-detail" style="height: 100%;" 	>
+<img src="{{i.image.url}}" alt="gallery-1" style="
+    height: 100%;width: 100%;
+    object-fit: cover;
+">
 <div class="overlay"></div>
 <div class="gallery-zoom">
 <a href="{{i.image.url}}" data-fancybox="gallery" class="gallery-elements">
