--- a/templates/superadmin/layouts/header.html
+++ b/templates/superadmin/layouts/header.html
@@ -130,6 +130,11 @@
                   <i class="side-menu__icon fe fe-user"></i>
                   <span class="side-menu__label">Testimonials</span>
                 </a>
+              </li> <li class="slide">
+                <a class="side-menu__item has-link" data-bs-toggle="slide" href="{% url 'superadmin:reservationlist' %}">
+                  <i class="side-menu__icon fe fe-user"></i>
+                  <span class="side-menu__label">Reservations</span>
+                </a>
               </li>
 
             </ul>
