--- a/templates/website/contact/contactus.html
+++ b/templates/website/contact/contactus.html
@@ -60,8 +60,8 @@
 <div class="contact-info contact-email">
 <i class="zmdi zmdi-email"></i>
 <h4>Email Address</h4>
-<span><a href="https://freebw.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="2e6d41405a4f4d5a6e4b564f435e424b004d4143">[email&#160;protected]</a></span>
-<span><a href="https://freebw.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="c38aada5ac83a6bba2aeb3afa6eda0acae">[email&#160;protected]</a></span>
+<span><a href="https://freebw.com/cdn-cgi/l/email-protection" class="__cf_email__" >royaleapice.ma@gmail.com</a></span>
+<!--<span><a href="https://freebw.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="c38aada5ac83a6bba2aeb3afa6eda0acae">[email&#160;protected]</a></span>-->
 </div>
 </div>
 </div>
