--- a/templates/website/layouts/footer.html
+++ b/templates/website/layouts/footer.html
@@ -65,7 +65,8 @@
 <div class="contact-inner">
 <i class="zmdi zmdi-pin"></i>
 <div class="text">
-<span class="address">Reon, 1535 Broadway, New York</span>
+<span class="address">Royal Spice, 827 William street Ste B
+, Longmeadow MA 01106</span>
 </div>
 </div>
 <div class="contact-inner">
@@ -77,7 +78,7 @@
 <div class="contact-inner">
 <i class="zmdi zmdi-email"></i>
 <div class="text">
-<span><a href="https://freebw.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="e9aa86879d888a9da98c91888499858cc78a8684">[email&#160;protected]</a></span>
+<span><a href="https://freebw.com/cdn-cgi/l/email-protection" class="__cf_email__" >royaleapice.ma@gmail.com</a></span>
 </div>
 </div>
 <div class="contact-inner">
@@ -154,7 +155,8 @@
 
 <script type="text/javascript" src="{% static 'website/vendor/fancybox-master/js/jquery.fancybox.min.js' %}"></script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEmXgQ65zpsjsEAfNPP9mBAz-5zjnIZBw"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB13ZAvCezMx5TETYIiGlzVIq65Mc2FG5g"></script>
+
 <script src="{% static 'website/js/theme-map.js' %}"></script>
 
 <script src="{% static 'website/vendor/sweetalert/sweetalert.min.js' %}"></script>
