--- a/templates/website/about/about.html
+++ b/templates/website/about/about.html
@@ -49,225 +49,225 @@
 </section>
 
 
-<section class="our-team-section our-team-about section-box" style="background-image: url({% static 'website/images/about-our-team.jpg' %})">
-<div class="container">
-<h3 class="special-heading">Discover</h3>
-<h2 class="special-heading-1">OUR STAFF</h2>
-<div class="row">
+<!--<section class="our-team-section our-team-about section-box" style="background-image: url({% static 'website/images/about-our-team.jpg' %})">-->
+<!--<div class="container">-->
+<!--<h3 class="special-heading">Discover</h3>-->
+<!--<h2 class="special-heading-1">OUR STAFF</h2>-->
+<!--<div class="row">-->
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
-<div class="our-team-content">
-<div class="member-image">
-<a href="#">
-<img src="{% static 'website/images/our-team-1.jpg' %}" alt="member-1">
-<div class="overlay"></div>
-</a>
-<div class="socials">
-<a><i class="zmdi zmdi-facebook"></i></a>
-<a><i class="zmdi zmdi-google-plus"></i></a>
-<a><i class="zmdi zmdi-twitter"></i></a>
-</div>
-<div class="background-gradient"></div>
-</div>
-<div class="member-info">
-<span class="name">Andrew Austin</span>
-<span class="job">Chef</span>
-</div>
-</div>
-</div>
+<!--<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">-->
+<!--<div class="our-team-content">-->
+<!--<div class="member-image">-->
+<!--<a href="#">-->
+<!--<img src="{% static 'website/images/our-team-1.jpg' %}" alt="member-1">-->
+<!--<div class="overlay"></div>-->
+<!--</a>-->
+<!--<div class="socials">-->
+<!--<a><i class="zmdi zmdi-facebook"></i></a>-->
+<!--<a><i class="zmdi zmdi-google-plus"></i></a>-->
+<!--<a><i class="zmdi zmdi-twitter"></i></a>-->
+<!--</div>-->
+<!--<div class="background-gradient"></div>-->
+<!--</div>-->
+<!--<div class="member-info">-->
+<!--<span class="name">Andrew Austin</span>-->
+<!--<span class="job">Chef</span>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
-<div class="our-team-content">
-<div class="member-image">
-<a href="#">
-<img src="{% static 'website/images/our-team-2.jpg' %}" alt="member-2">
-<div class="overlay"></div>
-</a>
-<div class="socials">
-<a><i class="zmdi zmdi-facebook"></i></a>
-<a><i class="zmdi zmdi-google-plus"></i></a>
-<a><i class="zmdi zmdi-twitter"></i></a>
-</div>
-<div class="background-gradient"></div>
-</div>
-<div class="member-info">
-<span class="name">Tom Anderson</span>
-<span class="job">Staff</span>
-</div>
-</div>
-</div>
+<!--<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">-->
+<!--<div class="our-team-content">-->
+<!--<div class="member-image">-->
+<!--<a href="#">-->
+<!--<img src="{% static 'website/images/our-team-2.jpg' %}" alt="member-2">-->
+<!--<div class="overlay"></div>-->
+<!--</a>-->
+<!--<div class="socials">-->
+<!--<a><i class="zmdi zmdi-facebook"></i></a>-->
+<!--<a><i class="zmdi zmdi-google-plus"></i></a>-->
+<!--<a><i class="zmdi zmdi-twitter"></i></a>-->
+<!--</div>-->
+<!--<div class="background-gradient"></div>-->
+<!--</div>-->
+<!--<div class="member-info">-->
+<!--<span class="name">Tom Anderson</span>-->
+<!--<span class="job">Staff</span>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
-<div class="our-team-content">
-<div class="member-image">
-<a href="#">
-<img src="{% static 'website/images/our-team-3.jpg' %}" alt="member-3">
-<div class="overlay"></div>
-</a>
-<div class="socials">
-<a><i class="zmdi zmdi-facebook"></i></a>
-<a><i class="zmdi zmdi-google-plus"></i></a>
-<a><i class="zmdi zmdi-twitter"></i></a>
-</div>
-<div class="background-gradient"></div>
-</div>
-<div class="member-info">
-<span class="name">Emma Johnson</span>
-<span class="job">Staff</span>
-</div>
-</div>
-</div>
-</div>
-</div>
-</section>
+<!--<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">-->
+<!--<div class="our-team-content">-->
+<!--<div class="member-image">-->
+<!--<a href="#">-->
+<!--<img src="{% static 'website/images/our-team-3.jpg' %}" alt="member-3">-->
+<!--<div class="overlay"></div>-->
+<!--</a>-->
+<!--<div class="socials">-->
+<!--<a><i class="zmdi zmdi-facebook"></i></a>-->
+<!--<a><i class="zmdi zmdi-google-plus"></i></a>-->
+<!--<a><i class="zmdi zmdi-twitter"></i></a>-->
+<!--</div>-->
+<!--<div class="background-gradient"></div>-->
+<!--</div>-->
+<!--<div class="member-info">-->
+<!--<span class="name">Emma Johnson</span>-->
+<!--<span class="job">Staff</span>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</section>-->
 
 
-<section class="about-testimonials section-box">
-<div class="container">
-<h3 class="special-heading">Reviews</h3>
-<h2 class="special-heading-1">TESTIMONIALS</h2>
-<div id="about-testimonials" class="owl-carousel owl-theme">
+<!--<section class="about-testimonials section-box">-->
+<!--<div class="container">-->
+<!--<h3 class="special-heading">Reviews</h3>-->
+<!--<h2 class="special-heading-1">TESTIMONIALS</h2>-->
+<!--<div id="about-testimonials" class="owl-carousel owl-theme">-->
 
-<div class="item">
-<div class="icon">
-<div class="quote">
-<i class="zmdi zmdi-quote"></i>
-</div>
-<div class="star">
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-</div>
-</div>
-<p>“Leo integer malesuada nunc vel risus commodo viverr ma. Laoreet sit amet cursus sit amet dictum. Auctor augue mauris augue neque gravida in fermentum et aliquet lectus.”</p>
-<div class="client">
-<img src="{% static 'website/images/about-testimonials-1.jpg' %}" alt="cilent-1">
-<div class="info">
-<span class="name">GEORGE HARRISON</span>
-<span class="job">UX Designer</span>
-</div>
-</div>
-</div>
+<!--<div class="item">-->
+<!--<div class="icon">-->
+<!--<div class="quote">-->
+<!--<i class="zmdi zmdi-quote"></i>-->
+<!--</div>-->
+<!--<div class="star">-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--</div>-->
+<!--</div>-->
+<!--<p>“Leo integer malesuada nunc vel risus commodo viverr ma. Laoreet sit amet cursus sit amet dictum. Auctor augue mauris augue neque gravida in fermentum et aliquet lectus.”</p>-->
+<!--<div class="client">-->
+<!--<img src="{% static 'website/images/about-testimonials-1.jpg' %}" alt="cilent-1">-->
+<!--<div class="info">-->
+<!--<span class="name">GEORGE HARRISON</span>-->
+<!--<span class="job">UX Designer</span>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 
-<div class="item">
-<div class="icon">
-<div class="quote">
-<i class="zmdi zmdi-quote"></i>
-</div>
-<div class="star">
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-<span><i class="zmdi zmdi-star-outline"></i></span>
-</div>
-</div>
-<p>“Dictum non consectetur a erat nam at lectus urna. Amet facilisis magna etiam tempor orci eu lobortis elementum. Non enim praesent elementum facilisis leo vel.”</p>
-<div class="client">
-<img src="{% static 'website/images/about-testimonials-2.jpg' %}" alt="client-2">
-<div class="info">
-<span class="name">STEVEN HOPKINS</span>
-<span class="job">UI Designer</span>
-</div>
-</div>
-</div>
+<!--<div class="item">-->
+<!--<div class="icon">-->
+<!--<div class="quote">-->
+<!--<i class="zmdi zmdi-quote"></i>-->
+<!--</div>-->
+<!--<div class="star">-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<span><i class="zmdi zmdi-star-outline"></i></span>-->
+<!--</div>-->
+<!--</div>-->
+<!--<p>“Dictum non consectetur a erat nam at lectus urna. Amet facilisis magna etiam tempor orci eu lobortis elementum. Non enim praesent elementum facilisis leo vel.”</p>-->
+<!--<div class="client">-->
+<!--<img src="{% static 'website/images/about-testimonials-2.jpg' %}" alt="client-2">-->
+<!--<div class="info">-->
+<!--<span class="name">STEVEN HOPKINS</span>-->
+<!--<span class="job">UI Designer</span>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 
-<div class="item">
-<div class="icon">
-<div class="quote">
-<i class="zmdi zmdi-quote"></i>
-</div>
-<div class="star">
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-</div>
-</div>
-<p>“Dapibus ultrices in iaculis nunc sed augue lacus viverra. Ar cursus vitae congue mauris rhoncus aenean vel. Sollicitudin nibh sit amet commodo lectus quam id leo in vitae turpis.”</p>
-<div class="client">
-<img src="images/about-testimonials-3.jpg" alt="cilent-3">
-<div class="info">
-<span class="name">AMBER MILLER</span>
-<span class="job">Marketing</span>
-</div>
-</div>
-</div>
+<!--<div class="item">-->
+<!--<div class="icon">-->
+<!--<div class="quote">-->
+<!--<i class="zmdi zmdi-quote"></i>-->
+<!--</div>-->
+<!--<div class="star">-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--</div>-->
+<!--</div>-->
+<!--<p>“Dapibus ultrices in iaculis nunc sed augue lacus viverra. Ar cursus vitae congue mauris rhoncus aenean vel. Sollicitudin nibh sit amet commodo lectus quam id leo in vitae turpis.”</p>-->
+<!--<div class="client">-->
+<!--<img src="images/about-testimonials-3.jpg" alt="cilent-3">-->
+<!--<div class="info">-->
+<!--<span class="name">AMBER MILLER</span>-->
+<!--<span class="job">Marketing</span>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 
-<div class="item">
-<div class="icon">
-<div class="quote">
-<i class="zmdi zmdi-quote"></i>
-</div>
-<div class="star">
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-</div>
-</div>
-<p>“Placerat in egestas erat imperdiet sed euismod. Quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. Porta nibh venenatis cras sed felis eget velit.”</p>
-<div class="client">
-<img src="images/about-testimonials-4.jpg" alt="client-4">
-<div class="info">
-<span class="name">BROOKE HUNT</span>
-<span class="job">Content Writer</span>
-</div>
-</div>
-</div>
+<!--<div class="item">-->
+<!--<div class="icon">-->
+<!--<div class="quote">-->
+<!--<i class="zmdi zmdi-quote"></i>-->
+<!--</div>-->
+<!--<div class="star">-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--</div>-->
+<!--</div>-->
+<!--<p>“Placerat in egestas erat imperdiet sed euismod. Quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. Porta nibh venenatis cras sed felis eget velit.”</p>-->
+<!--<div class="client">-->
+<!--<img src="images/about-testimonials-4.jpg" alt="client-4">-->
+<!--<div class="info">-->
+<!--<span class="name">BROOKE HUNT</span>-->
+<!--<span class="job">Content Writer</span>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 
-<div class="item">
-<div class="icon">
-<div class="quote">
-<i class="zmdi zmdi-quote"></i>
-</div>
-<div class="star">
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-<span><i class="zmdi zmdi-star-outline"></i></span>
-<span><i class="zmdi zmdi-star-outline"></i></span>
-</div>
-</div>
-<p>“Commodo viverra maecenas accumsan lacus vel facilisis volutpat. Sed faucibus turpis in eu. Est lorem ipsum dolor sit amet consecur adipiscing elit pellentesque.”</p>
-<div class="client">
-<img src="images/about-testimonials-5.jpg" alt="cilent-5">
-<div class="info">
-<span class="name">MONICA CAMPBELL</span>
-<span class="job">UI Designer</span>
-</div>
-</div>
-</div>
+<!--<div class="item">-->
+<!--<div class="icon">-->
+<!--<div class="quote">-->
+<!--<i class="zmdi zmdi-quote"></i>-->
+<!--</div>-->
+<!--<div class="star">-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<span><i class="zmdi zmdi-star-outline"></i></span>-->
+<!--<span><i class="zmdi zmdi-star-outline"></i></span>-->
+<!--</div>-->
+<!--</div>-->
+<!--<p>“Commodo viverra maecenas accumsan lacus vel facilisis volutpat. Sed faucibus turpis in eu. Est lorem ipsum dolor sit amet consecur adipiscing elit pellentesque.”</p>-->
+<!--<div class="client">-->
+<!--<img src="images/about-testimonials-5.jpg" alt="cilent-5">-->
+<!--<div class="info">-->
+<!--<span class="name">MONICA CAMPBELL</span>-->
+<!--<span class="job">UI Designer</span>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 
-<div class="item">
-<div class="icon">
-<div class="quote">
-<i class="zmdi zmdi-quote"></i>
-</div>
-<div class="star">
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star"></i>
-<i class="zmdi zmdi-star-half"></i>
-</div>
-</div>
-<p>“Tortor dignissim convallis aenean et tortor at. Praesent semper feugiat nibh sed pulvinar proin. Sagittis purus sit amet volutpat consequat mauris nunc congue.”</p>
-<div class="client">
-<img src="images/about-testimonials-6.jpg" alt="client-6">
-<div class="info">
-<span class="name">GEORGE EDWARDS</span>
-<span class="job">Creative Director</span>
-</div>
-</div>
-</div>
-</div>
-</div>
-</section>
+<!--<div class="item">-->
+<!--<div class="icon">-->
+<!--<div class="quote">-->
+<!--<i class="zmdi zmdi-quote"></i>-->
+<!--</div>-->
+<!--<div class="star">-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star"></i>-->
+<!--<i class="zmdi zmdi-star-half"></i>-->
+<!--</div>-->
+<!--</div>-->
+<!--<p>“Tortor dignissim convallis aenean et tortor at. Praesent semper feugiat nibh sed pulvinar proin. Sagittis purus sit amet volutpat consequat mauris nunc congue.”</p>-->
+<!--<div class="client">-->
+<!--<img src="images/about-testimonials-6.jpg" alt="client-6">-->
+<!--<div class="info">-->
+<!--<span class="name">GEORGE EDWARDS</span>-->
+<!--<span class="job">Creative Director</span>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</section>-->
 
 
 <div class="book-table-hp-1 section-box">
