--- a/templates/website/layouts/header.html
+++ b/templates/website/layouts/header.html
@@ -5,7 +5,7 @@
 <head>
 
 <meta charset="utf-8">
-<title>ROYAL SPICE</title>
+<title>Royal Spice | Website </title>
 <meta name="description" content>
 <meta name="author" content>
 
