--- a/templates/website/home/index.html
+++ b/templates/website/home/index.html
@@ -102,11 +102,27 @@
 <h3 class="special-heading">Testimonials</h3>
 <h2 class="special-heading-1">{{i.user|upper}}</h2>
 		<div class="star">
+			{% if i.star == 1 %}
 <i class="zmdi zmdi-star"></i>
+<span><i class="zmdi zmdi-star-outline"></i></span>
+<span><i class="zmdi zmdi-star-outline"></i></span>
+<span><i class="zmdi zmdi-star-outline"></i></span>
+<span><i class="zmdi zmdi-star-outline"></i></span>
+
+			{% elif i.star == 2 %}
+<i class="zmdi zmdi-star"></i>
+<i class="zmdi zmdi-star"></i>
+<span><i class="zmdi zmdi-star-outline"></i></span>
+<span><i class="zmdi zmdi-star-outline"></i></span>
+<span><i class="zmdi zmdi-star-outline"></i></span>
+			{% elif i.star == 3 %}
 <i class="zmdi zmdi-star"></i>
 <i class="zmdi zmdi-star"></i>
 <i class="zmdi zmdi-star"></i>
 <span><i class="zmdi zmdi-star-outline"></i></span>
+<span><i class="zmdi zmdi-star-outline"></i></span>
+			{% endif %}
+
 </div>
 <p>{{i.description}}</p>
 
@@ -267,45 +283,55 @@
 <div class="container">
 <div class="book-content">
 <form class="form-detail" method="post">
+	{% csrf_token %}
 <h3 class="special-heading">Reservation</h3>
 <h2 class="special-heading-1">BOOK A TABLE</h2>
 <p>Tempus urna et pharetra pharetra massa massa. Malesuada fames ac turpis egestas. Ut tristique et egestas quis.</p>
 <div class="form-group">
-<div class="form-row">
-<select name="people" id="people" class="input-text">
-<option value="1 Person">1 Person</option>
-<option value="2 Person">2 Person</option>
-<option value="3 Person">3 Person</option>
-<option value="4 Person">4 Person</option>
+<div class="row">
+	<div class="col-3">
+			<input type="text" name="name" class="input-text form-control" id="" placeholder="Name" required >
+
+		</div>
+	<div class="col-3">
+			<input type="text" name="phone" class="input-text form-control" id="" placeholder="Phone" required>
+
+		</div>
+	<div class="col-3">
+			<input type="email" name="email" class="input-text form-control" id="" placeholder="E-mail" required>
+
+		</div>
+	<div class="col-3">
+	<input type="submit" name="submit" class="submit au-btn au-btn-red btn-medium" value="BOOK A TABLE">
+
+		</div>
+		<div class="col-3">
+			<select name="people" id="people" class="input-text form-control" required>
+				<option value="">Select</option>
+
+<option value="1">1 Person</option>
+<option value="2">2 Person</option>
+<option value="3">3 Person</option>
+<option value="4">4 Person</option>
 </select>
-<span class="select-btn">
-<i class="zmdi zmdi-chevron-down"></i>
-</span>
-<span class="special">
-For
-</span>
-</div>
-<div class="form-row form-row-1">
-<input type="text" name="date" class="date" id="date" placeholder="8/9/2018">
-<span class="special">
-At
-</span>
-</div>
-<div class="form-row form-row-2">
-<select name="time" id="time" class="input-text">
+		</div><div class="col-3">
+			<input type="date" name="date" class="form-control" id="" placeholder="" autocomplete="off" required>
+
+		</div><div class="col-3">
+<select name="time" id="time" class="input-text form-control" required>
+<option value="">Select</option>
 <option value="7:00pm">7:00pm</option>
 <option value="8:00pm">8:00pm</option>
 <option value="9:00pm">9:00pm</option>
 <option value="10:00pm">10:00pm</option>
 </select>
-<span class="select-btn">
-<i class="zmdi zmdi-chevron-down"></i>
-</span>
-</div>
-<div class="form-row form-row-3">
-<input type="submit" name="submit" class="submit au-btn au-btn-red btn-medium" value="BOOK A TABLE">
-</div>
-</div>
+		</div>
+
+
+
+
+	</div>
+	</div>
 </form>
 </div>
 </div>
