--- a/templates/superadmin/reservations/reservation-table.html
+++ b/templates/superadmin/reservations/reservation-table.html
@@ -20,6 +20,7 @@
                                             <th>no.of persion</th>
                                             <th>Date</th>
                                             <th>Time</th>
+                                            <th>Action</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -27,12 +28,20 @@
                                         {% for i in datas %}
                                         <tr>
                                             <td>{{forloop.counter0|add:datas.start_index}}</td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
+                                            <td>{{i.name}}</td>
+                                            <td>{{i.phone}}</td>
+                                            <td>{{i.email}}</td>
+                                            <td>{{i.person}}</td>
+                                            <td>{{i.date}}</td>
+                                            <td>{{i.time}}</td>
+                                            <td>
+                                                {% if i.is_active %}
+                                                <button class="btn btn-success">Reserved</button>
+                                                {% else %}
+                                                <button class="btn btn-info" onclick="delete_modal({{i.id}})">Reserve</button>
+                                                {% endif %}
+                                            </td>
+
 
                                         </tr>
                                     {% endfor %}
