--- a/templates/website/menu/menu.html
+++ b/templates/website/menu/menu.html
@@ -6,7 +6,7 @@
 <section class="breadcrumb-our-team breadcrumb-menu-section section-box" style="background-image: url({% static 'website/images/our-team-bc.jpg' %})">
 <div class="container">
 <div class="breadcrumb-inner">
-<h1>Starter</h1>
+<h1>{{menu.0.category.title}}</h1>
 <!--<div class="menu">-->
 <!--<div class="menu-inner">-->
 <!--<img src="images/icons/menu-starter-bc-1.png" alt="menu-starter-1">-->
@@ -30,8 +30,8 @@
 
 <div class="container">
 <div class="menu-heading">
-<img src="{% static 'website/images/icons/menu-starter-icon-1.png' %}" alt="salad">
-<h2>SALAD</h2>
+<!--<img src="{% static 'website/images/icons/menu-starter-icon-1.png' %}" alt="salad">-->
+<h2></h2>
 </div>
 <div id="" class="">
 <div class="item row">
